[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-benchmarks"
version = "0.1.0"
description = "Standardized evaluation suite for agents across eight business domains."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "erron.ai"}]
dependencies = []

[project.urls]
Homepage = "https://github.com/erron-ai/agent-benchmarks"
Issues = "https://github.com/erron-ai/agent-benchmarks/issues"

[project.scripts]
agent-benchmarks = "agent_benchmarks.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
